- Added local copy of DFB++. Reasons:   - in the call to CreateDataBuffer, DFB++ would not allow to create     a streaming buffer because it uses a reference. This is not fixed in CVS,     and I doubt it will be soon.   - DFB++ would not allow to work on an IDirectFB interface created with the     C API. This change is trivial as well, but important.   - DFB++ is not packed by any distribution as far as I know, not even by Gentoo.     This means users will have to download and compile it manually.   - DFB++ is only a thin wrapper. No need to expect any important fixes.   - It is easy to take care of API additions with ifdefs. Supporting 0.9.21 and 0.9.22. - Now using streaming buffer in for MHPDataBuffer - Dropped supportt for DirectFB 0.9.20. Even the current version 0.9.22 is out for a long time.

--- a/branches/awt_from_classpath/README
+++ b/branches/awt_from_classpath/README
@@ -45,7 +45,7 @@ Installation:
          If you don't have GTK installed, you can savely disable
          compilation of the GTK peer of Classpath, it is not needed.
          
-   - DirectFB (www.directfb.org), version 0.9.20, 0.9.21 or 0.9.22.
+   - DirectFB (www.directfb.org), version 0.9.21 or 0.9.22.
       Please note that DirectFB is primarily used for its graphics capabilities.
       You do _not_ need a working framebuffer or supported graphics card.
       Do
@@ -66,16 +66,10 @@ Installation:
          - libjpeg >= 6.2
          - freetype2 >= 2.0.2 
          
-   - DFB++, with the same version number as your DirectFB installation
-   
-     This needs
+     DFB++ is now included in the package, but still needs
        * pkg-config (http://www.freedesktop.org/software/pkgconfig/, but
          this is a standard package, it will be available from your distributor)
         
-     If you installed DirectFB (as recommended) in /usr/local, and DFB++' configure
-     complains, do
-     PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/ ./configure
-      
    - ffmpeg, both 0.4.8 and 0.4.9-pre1 are tested
      ./configure --enable-shared
 
